[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Levels/Area.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Environment/Background.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Actors/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Objects/Planet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sounds/SFX/Pickup_Coin3.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Music/Adventure_SF_EDM.wav" type="AudioStream" id=7]
[ext_resource path="res://Graphics/Environment/space-rocks.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Environment/SpaceRocksAreaShape.png" type="Texture" id=9]

[node name="Area" type="Node2D" groups=["Level"]]
script = ExtResource( 2 )
enemy_scene = ExtResource( 4 )
planet_scene = ExtResource( 5 )
max_enemies = 0

[node name="Planets" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Background" type="ParallaxBackground" parent="."]

[node name="Layer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 600, 450 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Background/Layer"]
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 600, 450 )
__meta__ = {
"_edit_lock_": true
}

[node name="CoinSound" type="AudioStreamPlayer" parent="." groups=["SFX"]]
stream = ExtResource( 6 )
volume_db = -80.0

[node name="Music" type="AudioStreamPlayer" parent="." groups=["SFX"]]
stream = ExtResource( 7 )
volume_db = -80.0
autoplay = true

[node name="SpaceRocksAreaShape" type="Sprite" parent="."]
visible = false
texture = ExtResource( 9 )

[node name="SpaceRocksAreaShape2" type="Polygon2D" parent="."]
position = Vector2( 0, 5 )
texture = ExtResource( 8 )
invert_enable = true
invert_border = 300.0
polygon = PoolVector2Array( 246, -345, 256, -345, 256, -344, 261, -344, 261, -343, 265, -343, 265, -342, 269, -342, 269, -341, 272, -341, 272, -340, 275, -340, 275, -339, 278, -339, 278, -338, 280, -338, 280, -337, 282, -337, 282, -336, 284, -336, 284, -335, 286, -335, 286, -334, 288, -334, 288, -333, 290, -333, 290, -332, 292, -332, 292, -331, 294, -331, 294, -330, 295, -330, 295, -329, 297, -329, 297, -328, 298, -328, 298, -327, 300, -327, 300, -326, 301, -326, 301, -325, 302, -325, 302, -324, 304, -324, 304, -323, 305, -323, 305, -322, 306, -322, 306, -321, 307, -321, 307, -320, 308, -320, 308, -319, 309, -319, 309, -318, 310, -318, 310, -317, 312, -317, 312, -316, 313, -316, 313, -315, 314, -315, 314, -314, 315, -314, 315, -312, 316, -312, 316, -311, 317, -311, 317, -310, 318, -310, 318, -309, 319, -309, 319, -308, 320, -308, 320, -307, 321, -307, 321, -306, 322, -306, 322, -304, 323, -304, 323, -303, 324, -303, 324, -302, 325, -302, 325, -300, 326, -300, 326, -299, 327, -299, 327, -297, 328, -297, 328, -296, 329, -296, 329, -294, 330, -294, 330, -292, 331, -292, 331, -290, 332, -290, 332, -288, 333, -288, 333, -286, 334, -286, 334, -284, 335, -284, 335, -282, 336, -282, 336, -280, 337, -280, 337, -277, 338, -277, 338, -274, 339, -274, 339, -271, 340, -271, 340, -267, 341, -267, 341, -263, 342, -263, 342, -258, 343, -258, 343, -248, 344, -248, 344, 242, 343, 242, 343, 252, 342, 252, 342, 257, 341, 257, 341, 261, 340, 261, 340, 265, 339, 265, 339, 268, 338, 268, 338, 271, 337, 271, 337, 274, 336, 274, 336, 276, 335, 276, 335, 278, 334, 278, 334, 280, 333, 280, 333, 282, 332, 282, 332, 284, 331, 284, 331, 286, 330, 286, 330, 288, 329, 288, 329, 290, 328, 290, 328, 291, 327, 291, 327, 293, 326, 293, 326, 294, 325, 294, 325, 296, 324, 296, 324, 297, 323, 297, 323, 298, 322, 298, 322, 300, 321, 300, 321, 301, 320, 301, 320, 302, 319, 302, 319, 303, 318, 303, 318, 304, 317, 304, 317, 305, 316, 305, 316, 306, 315, 306, 315, 308, 314, 308, 314, 309, 313, 309, 313, 310, 312, 310, 312, 311, 310, 311, 310, 312, 309, 312, 309, 313, 308, 313, 308, 314, 307, 314, 307, 315, 306, 315, 306, 316, 305, 316, 305, 317, 304, 317, 304, 318, 302, 318, 302, 319, 301, 319, 301, 320, 300, 320, 300, 321, 298, 321, 298, 322, 297, 322, 297, 323, 295, 323, 295, 324, 294, 324, 294, 325, 292, 325, 292, 326, 290, 326, 290, 327, 288, 327, 288, 328, 286, 328, 286, 329, 284, 329, 284, 330, 282, 330, 282, 331, 280, 331, 280, 332, 278, 332, 278, 333, 275, 333, 275, 334, 272, 334, 272, 335, 269, 335, 269, 336, 265, 336, 265, 337, 261, 337, 261, 338, 256, 338, 256, 339, 247, 339, 247, 340, -245, 340, -245, 339, -254, 339, -254, 338, -259, 338, -259, 337, -263, 337, -263, 336, -267, 336, -267, 335, -270, 335, -270, 334, -273, 334, -273, 333, -276, 333, -276, 332, -278, 332, -278, 331, -280, 331, -280, 330, -282, 330, -282, 329, -284, 329, -284, 328, -286, 328, -286, 327, -288, 327, -288, 326, -290, 326, -290, 325, -292, 325, -292, 324, -293, 324, -293, 323, -295, 323, -295, 322, -296, 322, -296, 321, -298, 321, -298, 320, -299, 320, -299, 319, -300, 319, -300, 318, -302, 318, -302, 317, -303, 317, -303, 316, -304, 316, -304, 315, -305, 315, -305, 314, -306, 314, -306, 313, -307, 313, -307, 312, -308, 312, -308, 311, -310, 311, -310, 310, -311, 310, -311, 309, -312, 309, -312, 308, -313, 308, -313, 306, -314, 306, -314, 305, -315, 305, -315, 304, -316, 304, -316, 303, -317, 303, -317, 302, -318, 302, -318, 301, -319, 301, -319, 300, -320, 300, -320, 298, -321, 298, -321, 297, -322, 297, -322, 296, -323, 296, -323, 294, -324, 294, -324, 293, -325, 293, -325, 291, -326, 291, -326, 290, -327, 290, -327, 288, -328, 288, -328, 286, -329, 286, -329, 284, -330, 284, -330, 282, -331, 282, -331, 280, -332, 280, -332, 278, -333, 278, -333, 276, -334, 276, -334, 274, -335, 274, -335, 271, -336, 271, -336, 268, -337, 268, -337, 265, -338, 265, -338, 261, -339, 261, -339, 257, -340, 257, -340, 252, -341, 252, -341, 242, -342, 242, -342, -248, -341, -248, -341, -258, -340, -258, -340, -263, -339, -263, -339, -267, -338, -267, -338, -271, -337, -271, -337, -274, -336, -274, -336, -277, -335, -277, -335, -280, -334, -280, -334, -282, -333, -282, -333, -284, -332, -284, -332, -286, -331, -286, -331, -288, -330, -288, -330, -290, -329, -290, -329, -292, -328, -292, -328, -294, -327, -294, -327, -296, -326, -296, -326, -297, -325, -297, -325, -299, -324, -299, -324, -300, -323, -300, -323, -302, -322, -302, -322, -303, -321, -303, -321, -304, -320, -304, -320, -306, -319, -306, -319, -307, -318, -307, -318, -308, -317, -308, -317, -309, -316, -309, -316, -310, -315, -310, -315, -311, -314, -311, -314, -312, -313, -312, -313, -314, -312, -314, -312, -315, -311, -315, -311, -316, -310, -316, -310, -317, -308, -317, -308, -318, -307, -318, -307, -319, -306, -319, -306, -320, -305, -320, -305, -321, -304, -321, -304, -322, -303, -322, -303, -323, -302, -323, -302, -324, -300, -324, -300, -325, -299, -325, -299, -326, -298, -326, -298, -327, -296, -327, -296, -328, -295, -328, -295, -329, -293, -329, -293, -330, -292, -330, -292, -331, -290, -331, -290, -332, -288, -332, -288, -333, -286, -333, -286, -334, -284, -334, -284, -335, -282, -335, -282, -336, -280, -336, -280, -337, -278, -337, -278, -338, -276, -338, -276, -339, -273, -339, -273, -340, -270, -340, -270, -341, -267, -341, -267, -342, -263, -342, -263, -343, -259, -343, -259, -344, -254, -344, -254, -345, -244, -345, -244, -346, 246, -346 )
uv = PoolVector2Array( 599, 4, 609, 4, 609, 5, 614, 5, 614, 6, 618, 6, 618, 7, 622, 7, 622, 8, 625, 8, 625, 9, 628, 9, 628, 10, 631, 10, 631, 11, 633, 11, 633, 12, 635, 12, 635, 13, 637, 13, 637, 14, 639, 14, 639, 15, 641, 15, 641, 16, 643, 16, 643, 17, 645, 17, 645, 18, 647, 18, 647, 19, 648, 19, 648, 20, 650, 20, 650, 21, 651, 21, 651, 22, 653, 22, 653, 23, 654, 23, 654, 24, 655, 24, 655, 25, 657, 25, 657, 26, 658, 26, 658, 27, 659, 27, 659, 28, 660, 28, 660, 29, 661, 29, 661, 30, 662, 30, 662, 31, 663, 31, 663, 32, 665, 32, 665, 33, 666, 33, 666, 34, 667, 34, 667, 35, 668, 35, 668, 37, 669, 37, 669, 38, 670, 38, 670, 39, 671, 39, 671, 40, 672, 40, 672, 41, 673, 41, 673, 42, 674, 42, 674, 43, 675, 43, 675, 45, 676, 45, 676, 46, 677, 46, 677, 47, 678, 47, 678, 49, 679, 49, 679, 50, 680, 50, 680, 52, 681, 52, 681, 53, 682, 53, 682, 55, 683, 55, 683, 57, 684, 57, 684, 59, 685, 59, 685, 61, 686, 61, 686, 63, 687, 63, 687, 65, 688, 65, 688, 67, 689, 67, 689, 69, 690, 69, 690, 72, 691, 72, 691, 75, 692, 75, 692, 78, 693, 78, 693, 82, 694, 82, 694, 86, 695, 86, 695, 91, 696, 91, 696, 101, 697, 101, 697, 591, 696, 591, 696, 601, 695, 601, 695, 606, 694, 606, 694, 610, 693, 610, 693, 614, 692, 614, 692, 617, 691, 617, 691, 620, 690, 620, 690, 623, 689, 623, 689, 625, 688, 625, 688, 627, 687, 627, 687, 629, 686, 629, 686, 631, 685, 631, 685, 633, 684, 633, 684, 635, 683, 635, 683, 637, 682, 637, 682, 639, 681, 639, 681, 640, 680, 640, 680, 642, 679, 642, 679, 643, 678, 643, 678, 645, 677, 645, 677, 646, 676, 646, 676, 647, 675, 647, 675, 649, 674, 649, 674, 650, 673, 650, 673, 651, 672, 651, 672, 652, 671, 652, 671, 653, 670, 653, 670, 654, 669, 654, 669, 655, 668, 655, 668, 657, 667, 657, 667, 658, 666, 658, 666, 659, 665, 659, 665, 660, 663, 660, 663, 661, 662, 661, 662, 662, 661, 662, 661, 663, 660, 663, 660, 664, 659, 664, 659, 665, 658, 665, 658, 666, 657, 666, 657, 667, 655, 667, 655, 668, 654, 668, 654, 669, 653, 669, 653, 670, 651, 670, 651, 671, 650, 671, 650, 672, 648, 672, 648, 673, 647, 673, 647, 674, 645, 674, 645, 675, 643, 675, 643, 676, 641, 676, 641, 677, 639, 677, 639, 678, 637, 678, 637, 679, 635, 679, 635, 680, 633, 680, 633, 681, 631, 681, 631, 682, 628, 682, 628, 683, 625, 683, 625, 684, 622, 684, 622, 685, 618, 685, 618, 686, 614, 686, 614, 687, 609, 687, 609, 688, 600, 688, 600, 689, 108, 689, 108, 688, 99, 688, 99, 687, 94, 687, 94, 686, 90, 686, 90, 685, 86, 685, 86, 684, 83, 684, 83, 683, 80, 683, 80, 682, 77, 682, 77, 681, 75, 681, 75, 680, 73, 680, 73, 679, 71, 679, 71, 678, 69, 678, 69, 677, 67, 677, 67, 676, 65, 676, 65, 675, 63, 675, 63, 674, 61, 674, 61, 673, 60, 673, 60, 672, 58, 672, 58, 671, 57, 671, 57, 670, 55, 670, 55, 669, 54, 669, 54, 668, 53, 668, 53, 667, 51, 667, 51, 666, 50, 666, 50, 665, 49, 665, 49, 664, 48, 664, 48, 663, 47, 663, 47, 662, 46, 662, 46, 661, 45, 661, 45, 660, 43, 660, 43, 659, 42, 659, 42, 658, 41, 658, 41, 657, 40, 657, 40, 655, 39, 655, 39, 654, 38, 654, 38, 653, 37, 653, 37, 652, 36, 652, 36, 651, 35, 651, 35, 650, 34, 650, 34, 649, 33, 649, 33, 647, 32, 647, 32, 646, 31, 646, 31, 645, 30, 645, 30, 643, 29, 643, 29, 642, 28, 642, 28, 640, 27, 640, 27, 639, 26, 639, 26, 637, 25, 637, 25, 635, 24, 635, 24, 633, 23, 633, 23, 631, 22, 631, 22, 629, 21, 629, 21, 627, 20, 627, 20, 625, 19, 625, 19, 623, 18, 623, 18, 620, 17, 620, 17, 617, 16, 617, 16, 614, 15, 614, 15, 610, 14, 610, 14, 606, 13, 606, 13, 601, 12, 601, 12, 591, 11, 591, 11, 101, 12, 101, 12, 91, 13, 91, 13, 86, 14, 86, 14, 82, 15, 82, 15, 78, 16, 78, 16, 75, 17, 75, 17, 72, 18, 72, 18, 69, 19, 69, 19, 67, 20, 67, 20, 65, 21, 65, 21, 63, 22, 63, 22, 61, 23, 61, 23, 59, 24, 59, 24, 57, 25, 57, 25, 55, 26, 55, 26, 53, 27, 53, 27, 52, 28, 52, 28, 50, 29, 50, 29, 49, 30, 49, 30, 47, 31, 47, 31, 46, 32, 46, 32, 45, 33, 45, 33, 43, 34, 43, 34, 42, 35, 42, 35, 41, 36, 41, 36, 40, 37, 40, 37, 39, 38, 39, 38, 38, 39, 38, 39, 37, 40, 37, 40, 35, 41, 35, 41, 34, 42, 34, 42, 33, 43, 33, 43, 32, 45, 32, 45, 31, 46, 31, 46, 30, 47, 30, 47, 29, 48, 29, 48, 28, 49, 28, 49, 27, 50, 27, 50, 26, 51, 26, 51, 25, 53, 25, 53, 24, 54, 24, 54, 23, 55, 23, 55, 22, 57, 22, 57, 21, 58, 21, 58, 20, 60, 20, 60, 19, 61, 19, 61, 18, 63, 18, 63, 17, 65, 17, 65, 16, 67, 16, 67, 15, 69, 15, 69, 14, 71, 14, 71, 13, 73, 13, 73, 12, 75, 12, 75, 11, 77, 11, 77, 10, 80, 10, 80, 9, 83, 9, 83, 8, 86, 8, 86, 7, 90, 7, 90, 6, 94, 6, 94, 5, 99, 5, 99, 4, 109, 4, 109, 3, 599, 3 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223, 224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234, 235, 236, 237, 238, 239, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259, 260, 261, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271, 272, 273, 274, 275, 276, 277, 278, 279, 280, 281, 282, 283, 284, 285, 286, 287, 288, 289, 290, 291, 292, 293, 294, 295, 296, 297, 298, 299, 300, 301, 302, 303, 304, 305, 306, 307, 308, 309, 310, 311, 312, 313, 314, 315, 316, 317, 318, 319, 320, 321, 322, 323, 324, 325, 326, 327, 328, 329, 330, 331, 332, 333, 334, 335, 336, 337, 338, 339, 340, 341, 342, 343, 344, 345, 346, 347, 348, 349, 350, 351, 352, 353, 354, 355, 356, 357, 358, 359, 360, 361, 362, 363, 364, 365, 366, 367, 368, 369, 370, 371, 372, 373, 374, 375, 376, 377, 378, 379, 380, 381, 382, 383, 384, 385, 386, 387, 388, 389, 390, 391, 392, 393, 394, 395, 396, 397, 398, 399, 400, 401, 402, 403, 404, 405, 406, 407, 408, 409, 410, 411, 412, 413, 414, 415, 416, 417, 418, 419, 420, 421, 422, 423, 424, 425, 426, 427, 428, 429, 430, 431, 432, 433, 434, 435, 436, 437, 438, 439, 440, 441, 442, 443, 444, 445, 446, 447, 448, 449, 450, 451, 452, 453, 454, 455, 456, 457, 458, 459, 460, 461, 462, 463, 464, 465, 466, 467, 468, 469, 470, 471, 472, 473, 474, 475, 476, 477, 478, 479, 480, 481, 482, 483, 484, 485, 486, 487, 488, 489, 490, 491 ) ]

[node name="StaticBody2D" type="StaticBody2D" parent="SpaceRocksAreaShape2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SpaceRocksAreaShape2/StaticBody2D"]
position = Vector2( 0, -5 )
polygon = PoolVector2Array( 414, -511, 419, -511, 419, -510, 423, -510, 423, -509, 426, -509, 426, -508, 429, -508, 429, -507, 432, -507, 432, -506, 435, -506, 435, -505, 438, -505, 438, -504, 440, -504, 440, -503, 442, -503, 442, -502, 444, -502, 444, -501, 446, -501, 446, -500, 448, -500, 448, -499, 450, -499, 450, -498, 452, -498, 452, -497, 454, -497, 454, -496, 455, -496, 455, -495, 457, -495, 457, -494, 458, -494, 458, -493, 460, -493, 460, -492, 461, -492, 461, -491, 463, -491, 463, -490, 464, -490, 464, -489, 465, -489, 465, -488, 467, -488, 467, -487, 468, -487, 468, -486, 469, -486, 469, -485, 470, -485, 470, -484, 471, -484, 471, -483, 473, -483, 473, -482, 474, -482, 474, -481, 475, -481, 475, -480, 476, -480, 476, -479, 477, -479, 477, -478, 478, -478, 478, -477, 479, -477, 479, -476, 480, -476, 480, -475, 481, -475, 481, -474, 482, -474, 482, -473, 483, -473, 483, -472, 484, -472, 484, -470, 485, -470, 485, -469, 486, -469, 486, -468, 487, -468, 487, -467, 488, -467, 488, -465, 489, -465, 489, -464, 490, -464, 490, -463, 491, -463, 491, -461, 492, -461, 492, -460, 493, -460, 493, -458, 494, -458, 494, -457, 495, -457, 495, -455, 496, -455, 496, -454, 497, -454, 497, -452, 498, -452, 498, -450, 499, -450, 499, -448, 500, -448, 500, -446, 501, -446, 501, -444, 502, -444, 502, -442, 503, -442, 503, -440, 504, -440, 504, -438, 505, -438, 505, -435, 506, -435, 506, -432, 507, -432, 507, -429, 508, -429, 508, -426, 509, -426, 509, -423, 510, -423, 510, -419, 511, -419, 511, -414, 512, -414, 512, 414, 511, 414, 511, 419, 510, 419, 510, 423, 509, 423, 509, 426, 508, 426, 508, 429, 507, 429, 507, 432, 506, 432, 506, 435, 505, 435, 505, 438, 504, 438, 504, 440, 503, 440, 503, 442, 502, 442, 502, 444, 501, 444, 501, 446, 500, 446, 500, 448, 499, 448, 499, 450, 498, 450, 498, 452, 497, 452, 497, 454, 496, 454, 496, 455, 495, 455, 495, 457, 494, 457, 494, 458, 493, 458, 493, 460, 492, 460, 492, 461, 491, 461, 491, 463, 490, 463, 490, 464, 489, 464, 489, 465, 488, 465, 488, 467, 487, 467, 487, 468, 486, 468, 486, 469, 485, 469, 485, 470, 484, 470, 484, 472, 483, 472, 483, 473, 482, 473, 482, 474, 481, 474, 481, 475, 480, 475, 480, 476, 479, 476, 479, 477, 478, 477, 478, 478, 477, 478, 477, 479, 476, 479, 476, 480, 475, 480, 475, 481, 474, 481, 474, 482, 473, 482, 473, 483, 471, 483, 471, 484, 470, 484, 470, 485, 469, 485, 469, 486, 468, 486, 468, 487, 467, 487, 467, 488, 465, 488, 465, 489, 464, 489, 464, 490, 463, 490, 463, 491, 461, 491, 461, 492, 460, 492, 460, 493, 458, 493, 458, 494, 457, 494, 457, 495, 455, 495, 455, 496, 454, 496, 454, 497, 452, 497, 452, 498, 450, 498, 450, 499, 448, 499, 448, 500, 446, 500, 446, 501, 444, 501, 444, 502, 442, 502, 442, 503, 440, 503, 440, 504, 438, 504, 438, 505, 435, 505, 435, 506, 432, 506, 432, 507, 429, 507, 429, 508, 426, 508, 426, 509, 423, 509, 423, 510, 419, 510, 419, 511, 414, 511, 414, 512, -414, 512, -414, 511, -419, 511, -419, 510, -423, 510, -423, 509, -426, 509, -426, 508, -429, 508, -429, 507, -432, 507, -432, 506, -435, 506, -435, 505, -438, 505, -438, 504, -440, 504, -440, 503, -442, 503, -442, 502, -444, 502, -444, 501, -446, 501, -446, 500, -448, 500, -448, 499, -450, 499, -450, 498, -452, 498, -452, 497, -454, 497, -454, 496, -455, 496, -455, 495, -457, 495, -457, 494, -458, 494, -458, 493, -460, 493, -460, 492, -461, 492, -461, 491, -463, 491, -463, 490, -464, 490, -464, 489, -465, 489, -465, 488, -467, 488, -467, 487, -468, 487, -468, 486, -469, 486, -469, 485, -470, 485, -470, 484, -471, 484, -471, 483, -473, 483, -473, 482, -474, 482, -474, 481, -475, 481, -475, 480, -476, 480, -476, 479, -477, 479, -477, 478, -478, 478, -478, 477, -479, 477, -479, 476, -480, 476, -480, 475, -481, 475, -481, 474, -482, 474, -482, 473, -483, 473, -483, 471, -484, 471, -484, 470, -485, 470, -485, 469, -486, 469, -486, 468, -487, 468, -487, 467, -488, 467, -488, 465, -489, 465, -489, 464, -490, 464, -490, 463, -491, 463, -491, 461, -492, 461, -492, 460, -493, 460, -493, 458, -494, 458, -494, 457, -495, 457, -495, 455, -496, 455, -496, 454, -497, 454, -497, 452, -498, 452, -498, 450, -499, 450, -499, 448, -500, 448, -500, 446, -501, 446, -501, 444, -502, 444, -502, 442, -503, 442, -503, 440, -504, 440, -504, 438, -505, 438, -505, 435, -506, 435, -506, 432, -507, 432, -507, 429, -508, 429, -508, 426, -509, 426, -509, 423, -510, 423, -510, 419, -511, 419, -511, 414, -512, 414, -512, -13, -458, -13, -458, -12, -341, -12, -341, -11, -340, -11, -340, 248, -339, 248, -339, 256, -338, 256, -338, 261, -337, 261, -337, 265, -336, 265, -336, 269, -335, 269, -335, 272, -334, 272, -334, 274, -333, 274, -333, 277, -332, 277, -332, 279, -331, 279, -331, 282, -330, 282, -330, 284, -329, 284, -329, 286, -328, 286, -328, 288, -327, 288, -327, 289, -326, 289, -326, 291, -325, 291, -325, 293, -324, 293, -324, 294, -323, 294, -323, 296, -322, 296, -322, 297, -321, 297, -321, 299, -320, 299, -320, 300, -319, 300, -319, 301, -318, 301, -318, 303, -317, 303, -317, 304, -316, 304, -316, 305, -315, 305, -315, 306, -314, 306, -314, 307, -313, 307, -313, 308, -312, 308, -312, 309, -311, 309, -311, 310, -310, 310, -310, 311, -309, 311, -309, 312, -308, 312, -308, 313, -307, 313, -307, 314, -306, 314, -306, 315, -305, 315, -305, 316, -304, 316, -304, 317, -303, 317, -303, 318, -301, 318, -301, 319, -300, 319, -300, 320, -299, 320, -299, 321, -297, 321, -297, 322, -296, 322, -296, 323, -294, 323, -294, 324, -293, 324, -293, 325, -291, 325, -291, 326, -289, 326, -289, 327, -288, 327, -288, 328, -286, 328, -286, 329, -284, 329, -284, 330, -282, 330, -282, 331, -279, 331, -279, 332, -277, 332, -277, 333, -274, 333, -274, 334, -272, 334, -272, 335, -269, 335, -269, 336, -265, 336, -265, 337, -261, 337, -261, 338, -256, 338, -256, 339, -248, 339, -248, 340, 248, 340, 248, 339, 256, 339, 256, 338, 261, 338, 261, 337, 265, 337, 265, 336, 269, 336, 269, 335, 272, 335, 272, 334, 274, 334, 274, 333, 277, 333, 277, 332, 279, 332, 279, 331, 282, 331, 282, 330, 284, 330, 284, 329, 286, 329, 286, 328, 288, 328, 288, 327, 289, 327, 289, 326, 291, 326, 291, 325, 293, 325, 293, 324, 294, 324, 294, 323, 296, 323, 296, 322, 297, 322, 297, 321, 299, 321, 299, 320, 300, 320, 300, 319, 301, 319, 301, 318, 303, 318, 303, 317, 304, 317, 304, 316, 305, 316, 305, 315, 306, 315, 306, 314, 307, 314, 307, 313, 308, 313, 308, 312, 309, 312, 309, 311, 310, 311, 310, 310, 311, 310, 311, 309, 312, 309, 312, 308, 313, 308, 313, 307, 314, 307, 314, 306, 315, 306, 315, 305, 316, 305, 316, 304, 317, 304, 317, 303, 318, 303, 318, 301, 319, 301, 319, 300, 320, 300, 320, 299, 321, 299, 321, 297, 322, 297, 322, 296, 323, 296, 323, 294, 324, 294, 324, 293, 325, 293, 325, 291, 326, 291, 326, 289, 327, 289, 327, 288, 328, 288, 328, 286, 329, 286, 329, 284, 330, 284, 330, 282, 331, 282, 331, 279, 332, 279, 332, 277, 333, 277, 333, 274, 334, 274, 334, 272, 335, 272, 335, 269, 336, 269, 336, 265, 337, 265, 337, 261, 338, 261, 338, 256, 339, 256, 339, 248, 340, 248, 340, -248, 339, -248, 339, -256, 338, -256, 338, -261, 337, -261, 337, -265, 336, -265, 336, -269, 335, -269, 335, -272, 334, -272, 334, -274, 333, -274, 333, -277, 332, -277, 332, -279, 331, -279, 331, -282, 330, -282, 330, -284, 329, -284, 329, -286, 328, -286, 328, -288, 327, -288, 327, -289, 326, -289, 326, -291, 325, -291, 325, -293, 324, -293, 324, -294, 323, -294, 323, -296, 322, -296, 322, -297, 321, -297, 321, -299, 320, -299, 320, -300, 319, -300, 319, -301, 318, -301, 318, -303, 317, -303, 317, -304, 316, -304, 316, -305, 315, -305, 315, -306, 314, -306, 314, -307, 313, -307, 313, -308, 312, -308, 312, -309, 311, -309, 311, -310, 310, -310, 310, -311, 309, -311, 309, -312, 308, -312, 308, -313, 307, -313, 307, -314, 306, -314, 306, -315, 305, -315, 305, -316, 304, -316, 304, -317, 303, -317, 303, -318, 301, -318, 301, -319, 300, -319, 300, -320, 299, -320, 299, -321, 297, -321, 297, -322, 296, -322, 296, -323, 294, -323, 294, -324, 293, -324, 293, -325, 291, -325, 291, -326, 289, -326, 289, -327, 288, -327, 288, -328, 286, -328, 286, -329, 284, -329, 284, -330, 282, -330, 282, -331, 279, -331, 279, -332, 277, -332, 277, -333, 274, -333, 274, -334, 272, -334, 272, -335, 269, -335, 269, -336, 265, -336, 265, -337, 261, -337, 261, -338, 256, -338, 256, -339, 248, -339, 248, -340, -248, -340, -248, -339, -256, -339, -256, -338, -261, -338, -261, -337, -265, -337, -265, -336, -269, -336, -269, -335, -272, -335, -272, -334, -274, -334, -274, -333, -277, -333, -277, -332, -279, -332, -279, -331, -282, -331, -282, -330, -284, -330, -284, -329, -286, -329, -286, -328, -288, -328, -288, -327, -289, -327, -289, -326, -291, -326, -291, -325, -293, -325, -293, -324, -294, -324, -294, -323, -296, -323, -296, -322, -297, -322, -297, -321, -299, -321, -299, -320, -300, -320, -300, -319, -301, -319, -301, -318, -303, -318, -303, -317, -304, -317, -304, -316, -305, -316, -305, -315, -306, -315, -306, -314, -307, -314, -307, -313, -308, -313, -308, -312, -309, -312, -309, -311, -310, -311, -310, -310, -311, -310, -311, -309, -312, -309, -312, -308, -313, -308, -313, -307, -314, -307, -314, -306, -315, -306, -315, -305, -316, -305, -316, -304, -317, -304, -317, -303, -318, -303, -318, -301, -319, -301, -319, -300, -320, -300, -320, -299, -321, -299, -321, -297, -322, -297, -322, -296, -323, -296, -323, -294, -324, -294, -324, -293, -325, -293, -325, -291, -326, -291, -326, -289, -327, -289, -327, -288, -328, -288, -328, -286, -329, -286, -329, -284, -330, -284, -330, -282, -331, -282, -331, -279, -332, -279, -332, -277, -333, -277, -333, -274, -334, -274, -334, -272, -335, -272, -335, -269, -336, -269, -336, -265, -337, -265, -337, -261, -338, -261, -338, -256, -339, -256, -339, -248, -340, -248, -340, -21, -341, -21, -341, -20, -439, -20, -439, -21, -512, -21, -512, -414, -511, -414, -511, -419, -510, -419, -510, -423, -509, -423, -509, -426, -508, -426, -508, -429, -507, -429, -507, -432, -506, -432, -506, -435, -505, -435, -505, -438, -504, -438, -504, -440, -503, -440, -503, -442, -502, -442, -502, -444, -501, -444, -501, -446, -500, -446, -500, -448, -499, -448, -499, -450, -498, -450, -498, -452, -497, -452, -497, -454, -496, -454, -496, -455, -495, -455, -495, -457, -494, -457, -494, -458, -493, -458, -493, -460, -492, -460, -492, -461, -491, -461, -491, -463, -490, -463, -490, -464, -489, -464, -489, -465, -488, -465, -488, -467, -487, -467, -487, -468, -486, -468, -486, -469, -485, -469, -485, -470, -484, -470, -484, -471, -483, -471, -483, -473, -482, -473, -482, -474, -481, -474, -481, -475, -480, -475, -480, -476, -479, -476, -479, -477, -478, -477, -478, -478, -477, -478, -477, -479, -476, -479, -476, -480, -475, -480, -475, -481, -474, -481, -474, -482, -473, -482, -473, -483, -471, -483, -471, -484, -470, -484, -470, -485, -469, -485, -469, -486, -468, -486, -468, -487, -467, -487, -467, -488, -465, -488, -465, -489, -464, -489, -464, -490, -463, -490, -463, -491, -461, -491, -461, -492, -460, -492, -460, -493, -458, -493, -458, -494, -457, -494, -457, -495, -455, -495, -455, -496, -454, -496, -454, -497, -452, -497, -452, -498, -450, -498, -450, -499, -448, -499, -448, -500, -446, -500, -446, -501, -444, -501, -444, -502, -442, -502, -442, -503, -440, -503, -440, -504, -438, -504, -438, -505, -435, -505, -435, -506, -432, -506, -432, -507, -429, -507, -429, -508, -426, -508, -426, -509, -423, -509, -423, -510, -419, -510, -419, -511, -414, -511, -414, -512, 414, -512 )

[connection signal="destroy_enemy" from="Player" to="." method="_on_Player_destroy_enemy"]
[connection signal="destroy_planet" from="Player" to="." method="_on_Player_destroy_planet"]
